# mcp-test

./: .gitignore  README.md  broken_server.py  main.py  notify_server.py  pyproject.toml  requirements.txt  server.py  test_client.py  test_server.py  weather_server.py
projects/requirements_server/: helpers.py  server.py
projects/requirements_server/utils/: nested.py
