[project]
name = "mcp-test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastmcp @ git+https://github.com/jlowin/fastmcp.git@e845b56a349adc9610aedad1e62eec3f6de31234",
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-asyncio",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
env = ["FASTMCP_STATELESS_HTTP=True"]
